# Estienne

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.github/: rust.yml
.github/workflows/: rust.yml
benches/: README.md  benchmark.rs.ignore
src/: lib.rs
src/locales/: en_us.rs  es_es.rs  es_sp.rs  mod.rs  nwt_en.rs
src/parsers/: mod.rs  parsers.rs  scripture.rs  souround.rs  surround.rs
src/url/: mod.rs
tests/: integration_tests.rs
