[package]
name = "estienne"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "est"

[dependencies]
once_cell = "1.12"
thiserror ="1.0"
regex = "1"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = { version= "0.4", features = ["html_reports"] }

#[[bench]]
#name = "benchmark"
#harness = false
