[package]
name = "estienne"
version = "0.6.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "est"

[dependencies]
thiserror ="1.0"
regex = "1"
lazy_static = "1.5.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
#criterion = { version= "0.4", features = ["html_reports"] }

#[[bench]]
#name = "benchmark"
#harness = false
